--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "fastapi-portfolio"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.9"
 dependencies = [
     "bcrypt==4.1.2",
     "fastapi>=0.122.0",
@@ -18,4 +18,5 @@ dependencies = [
     "slowapi>=0.1.9",
     "sqlalchemy>=2.0.44",
     "uvicorn[standard]>=0.38.0",
+    "psycopg2-binary",
 ]
