--- a/vercel.json
+++ b/vercel.json
@@ -25,9 +25,8 @@
     }
   ],
   "functions": {
-    "api/index.py": {
-      "runtime": "python3.9"
-    }
+  "api/*.py": {
+    "runtime": "python3.11" }
   }
 }
 
